#!/usr/bin/env php
<?php

use Symfony\Component\Console\Application;
use Zenstruck\Changelog\Command\PreviewCommand;

set_time_limit(0);

foreach ([__DIR__ . '/../../../autoload.php', __DIR__ . '/../vendor/autoload.php'] as $autoload) {
    if (file_exists($autoload)) {
        break;
    }
}

require $autoload;

$application = new Application('zenstruck/changelog', '@dev');

$application->addCommands([
    $default = new PreviewCommand(),
]);

$application->setDefaultCommand($default->getName());
$application->run();