@@ -4,6 +4,7 @@ namespace Zenstruck\Changelog;
 
 use Symfony\Component\HttpClient\HttpClient;
 use Symfony\Component\HttpClient\ScopingHttpClient;
+use Symfony\Contracts\HttpClient\Exception\HttpExceptionInterface;
 use Symfony\Contracts\HttpClient\HttpClientInterface;
 
 /**
@@ -13,11 +14,11 @@ final class GitHubApi
 {
     private HttpClientInterface $http;
 
-    public function __construct(?string $token = null)
+    public function __construct()
     {
         $headers = ['Accept' => 'application/vnd.github.v3+json'];
 
-        if ($token) {
+        if ($token = GitHubToken::get()) {
             $headers['Authorization'] = "token {$token}";
         }
 
@@ -28,13 +29,13 @@ final class GitHubApi
 
     public function repository(string $name): Repository
     {
-        return new Repository($this->http->request('GET', "/repos/{$name}")->toArray(), $this);
+        return new Repository($this->request('GET', "/repos/{$name}"), $this);
     }
 
     public function commits(string $repository, Comparison $comparison): CommitCollection
     {
         if (!$comparison->from()) {
-            $response = $this->http->request('GET', "/repos/{$repository}/commits?sha={$comparison}")->toArray();
+            $response = $this->request('GET', "/repos/{$repository}/commits?sha={$comparison}");
 
             return new CommitCollection($response, $repository, $this);
         }
@@ -50,23 +51,23 @@ final class GitHubApi
 
     public function releases(string $repository): ReleaseCollection
     {
-        $response = $this->http->request('GET', "/repos/{$repository}/releases")->toArray();
+        $response = $this->request('GET', "/repos/{$repository}/releases");
 
         return new ReleaseCollection($response);
     }
 
     public function pullRequestFor(string $repository, Commit $commit): ?PullRequest
     {
-        $response = $this->http->request('GET', "/repos/{$repository}/commits/{$commit->sha()}/pulls", [
+        $response = $this->request('GET', "/repos/{$repository}/commits/{$commit->sha()}/pulls", [
             'headers' => ['Accept' => 'application/vnd.github.groot-preview+json'],
-        ])->toArray();
+        ]);
 
         return isset($response[0]) ? new PullRequest($response[0]) : null;
     }
 
     public function loginForEmail(string $email): ?string
     {
-        $response = $this->http->request('GET', "/search/users?q={$email} in:email")->toArray();
+        $response = $this->request('GET', "/search/users?q={$email} in:email");
 
         if (!isset($response['items'])) {
             return null;
@@ -79,5 +80,18 @@ final class GitHubApi
         }
 
         return null;
+    }
+
+    private function request(string $method, string $endpoint, array $options = []): array
+    {
+        try {
+            return $this->http->request($method, $endpoint, $options)->toArray();
+        } catch (HttpExceptionInterface $e) {
+            if (\in_array($e->getResponse()->getStatusCode(), [401, 403], true)) {
+                throw new \RuntimeException('Run "changelog init" to create a github personal access token then run command again.', 0, $e);
+            }
+
+            throw $e;
+        }
     }
 }
