@@ -2,7 +2,7 @@
 <?php
 
 use Symfony\Component\Console\Application;
-use Zenstruck\Changelog\Command\PreviewCommand;
+use Zenstruck\Changelog\Command\InitCommand;use Zenstruck\Changelog\Command\PreviewCommand;
 
 set_time_limit(0);
 
@@ -18,6 +18,7 @@ $application = new Application('zenstruck/changelog', '@dev');
 
 $application->addCommands([
     $default = new PreviewCommand(),
+    new InitCommand(),
 ]);
 
 $application->setDefaultCommand($default->getName());
